really.. removing xml bind